fix: changed spacing

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     justify-content: center;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, figure {
     margin: 0;
 }
 
@@ -29,10 +29,15 @@ h3 {
 aside {
     width: 40%;
     color: white;
+    background-color: #2c323e;
 }
 
 main {
     width: 60%;
+}
+
+header {
+    padding: 7rem 2rem 3rem 5rem;
 }
 
 section {
@@ -67,11 +72,11 @@ section {
 }
 
 #education {
-    background-color: #2c323e;
     padding-bottom: 4rem;
 }
 
 #image-simulator {
     width: 100%;
     height:30rem;
+    background-color: #777;
 }
